# fastapi_mongodb

./: app.py  connector.py  pyproject.toml  tests.py
models/: number.py  user.py
routes/: auth.py  number.py
